hello/k8/other-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: other-deployment
  labels:
    name: other-deployment-label
spec:
  selector:
    matchLabels:
      app: other
  template:
    metadata:
      labels:
        app: other
    spec:
      containers:
      - name: other
        image: harshraj22/other
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8002
