hello/k8/main-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-service
spec:
  selector:
    app: main
  type: ClusterIP
  ports:
  - port: 8001
    targetPort: 8001
